# yai-cli

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Doxyfile  Makefile  NOTICE  README.md  README.stub  SECURITY.md  THIRD_PARTY_NOTICES.md  VERSIONING.md  yai
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  proposal.md
.github/workflows/: ci.yml
docs/: COMMANDS.md  CONTRACT.md  README.md
docs/api/: C_MAINPAGE.md
docs/development/: build.md  layout-migration.md  release.md  repo-tooling.md  specs-pinning.md  testing.md
docs/guide/: install.md  quickstart.md  troubleshooting.md
docs/reference/: bundle.md  contract.md  governance.md
include/: yai_cli.h  yai_cmd.h  yai_cmd_law.h  yai_envelope.h  yai_paths.h  yai_rpc.h
include/yai_cli/: cmd.h  cmd_law.h  env.h  errors.h  fmt.h
src/: cmd_dispatch.c  cmd_engine.c  cmd_kernel.c  cmd_law.c  cmd_mind.c  cmd_root.c  cmd_test.c  cmd_up.c  cmd_ws.c  env.c  envelope.c  fmt.c  main.c  paths.c  rpc.c
src/cli/: dispatch.c
src/commands/: engine.c  kernel.c  law.c  mind.c  root.c  selftest.c  up.c  workspace.c
src/platform/: env.c  paths.c
src/runtime/: rpc_client.c
src/support/: fmt.c
tests/: README.md  test_parse.c
tools/: POLICY.md  README.md
tools/python/: pyproject.toml
tools/python/yai_cli_tools/: cli.py  util.py
tools/python/yai_cli_tools/doctor/: env.py
tools/python/yai_cli_tools/release/: bump.py
tools/python/yai_cli_tools/verify/: build.py  layout.py  smoke.py  specs.py  tests.py
tools/sh/: colors.sh  (+1 more)
(+10 files in other folders)
