[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yai-cli-tools"
version = "0.1.0"
description = "Repository tooling for yai-cli"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["yai_cli_tools*"]
